# AimRT

./: .cmake-format.py  .gitignore  .pycodestyle  CMakeLists.txt  CODE_OF_CONDUCT.md  CODE_OF_CONDUCT.zh_CN.md  CONTRIBUTING.md  CONTRIBUTING.zh_CN.md  LICENSE  README.md  README.zh_CN.md  build.bat  build.sh  check_aimrt_env.sh  format.sh  test.bat  test.sh  url_cn.bashrc
src/: CMakeLists.txt
src/common/: CMakeLists.txt
src/common/net/: CMakeLists.txt  asio_http_cli.h  asio_http_svr.h  asio_http_test.cc  asio_tcp_cli.h  asio_tcp_svr.h  asio_tcp_test.cc  asio_tools.h  asio_udp_cli.h  asio_udp_svr.h  asio_udp_test.cc  asio_ws_cli.h  asio_ws_svr.h  asio_ws_test.cc  http_dispatcher.h  http_dispatcher_test.cc
src/common/ros2_util/: CMakeLists.txt  json_convert.h  json_convert_test.cc  json_cpp_utils.h  rostype_mapping.h  type_support_util.h  yaml_convert.h  yaml_convert_test.cc  yaml_cpp_utils.h
src/common/util/: CMakeLists.txt  block_queue.h  block_queue_test.cc  buffer_util.h  buffer_util_test.cc  deferred.h  dynamiclatch.h  dynamiclatch_test.cc  exception.h  format.h  func_name.h  light_signal.h  light_signal_test.cc  log_util.h  same_arg_trait.h  same_arg_trait_test.cc  stl_tool.h  stl_tool_test.cc  string_util.h  string_util_test.cc  sys_tools.h  time_util.h  time_util_test.cc  url_encode.h  url_encode_test.cc  url_parser.h  url_parser_test.cc
src/examples/: CMakeLists.txt
src/examples/cpp/: CMakeLists.txt
src/examples/plugins/: CMakeLists.txt
src/examples/py/: py_tests.py
src/examples/utils/: common.py  example_items.py  run_all_example.py  run_all_example.sh
src/interface/: CMakeLists.txt  generate_aggregate_headers.py
src/interface/aimrt_core_plugin_interface/: CMakeLists.txt  aimrt_core_plugin_base.h  aimrt_core_plugin_export.h  aimrt_core_plugin_interface.h  aimrt_core_plugin_main.h
src/interface/aimrt_module_c_interface/: CMakeLists.txt  aimrt_module_c_interface.h  core_base.h  module_base.h
src/interface/aimrt_module_cpp_interface/: CMakeLists.txt  aimrt_module_cpp_interface.h  core.h  module_base.h
src/interface/aimrt_module_protobuf_interface/: CMakeLists.txt  aimrt_module_protobuf_interface.h
src/interface/aimrt_module_ros2_interface/: CMakeLists.txt  aimrt_module_ros2_interface.h
src/interface/aimrt_pkg_c_interface/: CMakeLists.txt  aimrt_pkg_c_interface.h  pkg_export.h  pkg_macro.h  pkg_main.h
src/interface/aimrt_type_support_pkg_c_interface/: aimrt_type_support_pkg_c_interface.h  type_support_pkg_export.h  type_support_pkg_main.h
src/plugins/: CMakeLists.txt
src/plugins/echo_plugin/: CMakeLists.txt  echo_plugin.cc  echo_plugin.h  echo_plugin_main.cc  global.cc  global.h  topic_meta.h  topic_meta_key.h  type_support_pkg_loader.cc  type_support_pkg_loader.h
src/plugins/grpc_plugin/: CMakeLists.txt  global.cc  global.h  grpc_plugin.cc  grpc_plugin.h  grpc_plugin_main.cc  grpc_rpc_backend.cc  grpc_rpc_backend.h
src/plugins/iceoryx2_plugin/: CMakeLists.txt  README.md  global.cc  global.h  iceoryx2_channel_backend.cc  iceoryx2_channel_backend.h  iceoryx2_plugin.cc  iceoryx2_plugin.h  iceoryx2_plugin_main.cc  iceoryx2_publisher.h  iceoryx2_subscriber.h  iceoryx2_types.h
src/plugins/iceoryx_plugin/: CMakeLists.txt  global.cc  global.h  iceoryx_buffer_array_allocator.h  iceoryx_channel_backend.cc  iceoryx_channel_backend.h  iceoryx_manager.cc  iceoryx_manager.h  iceoryx_plugin.cc  iceoryx_plugin.h  iceroyx_plugin_main.cc  util.cc  util.h
src/plugins/log_control_plugin/: CMakeLists.txt  global.cc  global.h  log_control_plugin.cc  log_control_plugin.h  log_control_plugin_main.cc  service.cc  service.h
src/plugins/mqtt_plugin/: CMakeLists.txt  global.cc  global.h  mqtt_channel_backend.cc  mqtt_channel_backend.h  mqtt_plugin.cc  mqtt_plugin.h  mqtt_plugin_main.cc  mqtt_rpc_backend.cc  mqtt_rpc_backend.h  msg_handle_registry.h
src/plugins/net_plugin/: CMakeLists.txt  global.cc  global.h  msg_handle_registry.h  net_plugin.cc  net_plugin.h  net_plugin_main.cc
src/plugins/opentelemetry_plugin/: CMakeLists.txt  context_carrier.h  global.cc  global.h  opentelemetry_plugin.cc  opentelemetry_plugin.h  opentelemetry_plugin_main.cc  util.h
src/plugins/parameter_plugin/: CMakeLists.txt  global.cc  global.h  parameter_plugin.cc  parameter_plugin.h  parameter_plugin_main.cc  service.cc  service.h
src/plugins/proxy_plugin/: CMakeLists.txt  global.cc  global.h  proxy_action.cc  proxy_action.h  proxy_plugin.cc  proxy_plugin.h  proxy_plugin_main.cc  topic_meta.h  topic_meta_key.h
src/plugins/record_playback_plugin/: CMakeLists.txt  global.cc  global.h  metadata_yaml.h  playback_action.cc  playback_action.h  record_action.cc  record_action.h  record_playback_plugin.cc  record_playback_plugin.h  record_playback_plugin_main.cc  ros_storage.h  service.cc  service.h  topic_meta.h  topic_meta_key.h  type_support_pkg_loader.cc  type_support_pkg_loader.h
src/plugins/ros2_plugin/: CMakeLists.txt  global.cc  global.h  ros2_adapter_rpc_client.cc  ros2_adapter_rpc_client.h  ros2_adapter_rpc_server.cc  ros2_adapter_rpc_server.h  ros2_adapter_subscription.cc  ros2_adapter_subscription.h  ros2_channel_backend.cc  ros2_channel_backend.h  ros2_name_encode.h  ros2_name_encode_test.cc  ros2_plugin.cc  ros2_plugin.h  ros2_plugin_main.cc  ros2_rpc_backend.cc  ros2_rpc_backend.h  ros2_rpc_backend_test.cc
src/plugins/service_introspection_plugin/: CMakeLists.txt  global.cc  global.h  service_introspection_plugin.cc  service_introspection_plugin.h  service_introspection_plugin_main.cc
src/plugins/time_manipulator_plugin/: CMakeLists.txt  global.cc  global.h  service.cc  service.h  time_manipulator_executor.cc  time_manipulator_executor.h  time_manipulator_plugin.cc  time_manipulator_plugin.h  time_manipulator_plugin_main.cc
src/plugins/topic_logger_plugin/: CMakeLists.txt  topic_logger_backend.cc  topic_logger_backend.h  topic_logger_plugin.cc  topic_logger_plugin.h  topic_logger_plugin_main.cc
src/protocols/: CMakeLists.txt
src/runtime/: CMakeLists.txt
src/test/: __init__.py  conftest.py  requirements.txt
src/tools/: CMakeLists.txt
(+1338 files in other folders)
