<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>actuator_ros2</name>
  <version>0.1.0</version>
  <description>Contains message and service definitions used by the examples.</description>

  <maintainer email="wangtian@zhiyuan-robot.com">wangtian</maintainer>

  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <buildtool_depend>rosidl_default_generators</buildtool_depend>

  <exec_depend>rosidl_default_runtime</exec_depend>

  <member_of_group>rosidl_interface_packages</member_of_group>

  <depend>std_msgs</depend>

  <export>
    <build_type>ament_cmake</build_type>
    <!-- <ros1_bridge mapping_rules="mapping_rules.yaml"/> -->
  </export>
</package>
